hphp/test/zend/good/ext/standard/tests/file/pathinfo_basic1.php.skipif
<?hh
<<__EntryPoint>> function main() {
if(substr(PHP_OS, 0, 3) == "WIN")
  die("skip Not valid for Windows");
}
